--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <i class="ri-menu-line"></i>
         </label>
         <ul class = "nav_tabs">
-            <li><a href="Index.html" class="home">Home</a></li>
+            <li><a href="index.html" class="home">Home</a></li>
             <li><a href="menu.html" class="menu">Menu</a></li>
             <li><a href="more.html" class="more">More</a></li>
         </ul> 
