--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
             <div class ="sea_blender">
                 
                 <h2>Menu</h2>
-                <button class="order"><a href="/Main Web/fruity yakult/order.html">order now
+                <button class="order"><a href="/fruity yakult/order.html">order now
                 </a></button>
                 
                 <div class ="soda_fruity_container">
