--- a/fruity yakult/order.html
+++ b/fruity yakult/order.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="order.css">
 </head>
 <body>
-    <a href="/Main Web/menu.html">Return</a>
+    <a href="menu.html">Return</a>
     <form id="orderForm">
         <div class="order" id="order">
             <h3>Soda Pop (90 pesos each):</h3>
