--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
             <i class="ri-menu-line"></i>
         </label>
         <ul class = "nav_tabs">
-            <li><a href="index-new.html" class="home">Home</a></li>
+            <li><a href="index.html" class="home">Home</a></li>
             <li><a href="menu.html" class="menu">Menu</a></li>
             <li><a href="more.html" class="more">More</a></li>
         </ul> 
@@ -30,7 +30,7 @@
             <div class ="sea_blender">
                 
                 <h2>Menu</h2>
-                <button class="order"><a href="/Main Web/fruity yakult/order.html">order now
+                <button class="order"><a href="order.html">order now
                 </a></button>
                 
                 <div class ="soda_fruity_container">
