--- a/more.html
+++ b/more.html
@@ -27,7 +27,7 @@
     <div class="photobooth_section">
         <!--PhotoBooth image-->
         <div class="photobooth_pic">
-            <img src="weblogo/photobooth.png">
+            <img src="weblogo/logo2.png">
         </div>
         
         <div class="photobooth_para">
